--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -4,6 +4,9 @@ PluggableAuthService changelog
 PluggableAuthService 1.6.2 (unreleased)
 ---------------------------------------
 
+- Launchpad #420319:  Fix misconfigured ``startswith`` match type filter
+  in ``plugins.DomainAuthHelper``.
+
 - Fixed test setup for tests using page templates relying on the
   DefaultTraversable adapter.
 
