--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -1,6 +1,9 @@
 PluggableAuthService changelog
 ==============================
 
+PluggableAuthService 1.6.3 (unreleased)
+---------------------------------------
+
 PluggableAuthService 1.6.2 (2009-11-16)
 ---------------------------------------
 
