--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change Log
 ==========
 
+
+1.7.0b2 (Unreleased)
+--------------------
+
+- Modify ZODBGroupManager to update group title and description independently.
+
 1.7.0b1 (2009-11-16)
 --------------------
 
