--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -1,6 +1,10 @@
 PluggableAuthService changelog
 ==============================
 
+PluggableAuthService 1.6.4 (unreleased)
+---------------------------------------
+
+
 PluggableAuthService 1.6.3 (2010-02-01)
 ---------------------------------------
 
